# SeeTouch

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
memory/: MEMORY.md  collaboration_style.md  development_history.md  future_roadmap.md  product_overview.md  technical_decisions.md
phone_agent/: __init__.py  __main__.py  config.py
phone_agent/cli/: main.py
phone_agent/core/: action.py  runner.py  task.py
phone_agent/device/: base.py
phone_agent/device/android/: __init__.py  app_launcher.py  app_table.py  controller.py
phone_agent/perception/: __init__.py
phone_agent/reasoning/: __init__.py  base.py  doubao.py  parser.py  prompts.py
phone_agent/safety/: __init__.py  guard.py
phone_agent/tests/unit/: test_app_launcher.py
scripts/: doctor.py  replay.py
seetouch/: __init__.py  __main__.py  config.py  logging_config.py
seetouch/cli/: main.py
seetouch/core/: __init__.py  action.py  event_bus.py  log_bridge.py  runner.py  session.py
seetouch/debugger/: __init__.py  app.py  debug_session.py
seetouch/debugger/static/: app.js  index.html  style.css
seetouch/device/: __init__.py  base.py
seetouch/device/android/: app_launcher.py  controller.py
seetouch/perception/: screen.py
seetouch/reasoning/: doubao.py  parser.py  prompts.py
seetouch/tests/unit/: test_app_launcher.py
tests/integration/: test_runner_with_mock_device.py
tests/unit/: test_app_launcher.py  test_event_bus.py  test_guard.py  test_log_bridge.py  test_parser.py  test_runner_events.py  test_screen.py
