[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seetouch"
version = "0.1.0"
description = "Vision-driven mobile GUI agent that sees your screen and operates your phone via natural language."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Danny Yang" }]

dependencies = [
    "uiautomator2>=3.2.0",
    "openai>=1.40.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]
ui = [
    "rich>=13.0",
]
debugger = [
    "flask>=3.0",
    "flask-socketio>=5.3",
]

[project.scripts]
seetouch = "seetouch.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["seetouch*"]
exclude = ["tests*", "scripts*", "runs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
